2007-05-04  Kohei Yoshida  <kyoshida@novell.com>

    * source/numeric/nlpmodel.cxx: added #include <stdio.h> header to fix 
      build breakage.  

2007-04-30  Kohei Yoshida  <kyoshida@novell.com>

    * workben/testcase/sudoku.ods:
    * workben/testcase/tc1.ods:
    * workben/testcase/tc2.ods:
    * workben/testcase/tc3.ods:
    * workben/testcase/tc4_timealloc.ods: added.

    * workben/unittest:
    * workben/unittest/Makefile:
    * source/numeric/matrix_test.cxx: added for unit-testing.

    * source/numeric/cellfuncobj.cxx:
    * source/inc/numeric/cellfuncobj.hxx:
    * source/inc/numeric/funcobj.hxx: changed signature of getFuncString().

    * source/inc/numeric/matrix.hxx:
    * source/numeric/matrix.cxx: cleaned up the Matrix class to remove its
    implementation class & file-wide tab->space conversion.

    * source/numeric/nlpmodel.cxx: removed unused header file #include.

2007-04-08  Kohei Yoshida  <kyoshida@novell.com>

    * source/inc/numeric/cellfuncobj.hxx:
    * source/inc/numeric/funcobj.hxx:
    * source/inc/numeric/nlpbase.hxx:
    * source/numeric/cellfuncobj.cxx:
    * source/numeric/nlpbase.cxx:
    * source/numeric/nlpqnewton.cxx: added getVars() method to function object
    to return a reference of current variable values, and made changes to 
    relevant algorithm/model code.  Because the solutions are now pulled 
    directly from the funcion object (to avoid multiple copying of vector's),
    there is no need to call setSolution(...) at the end of optimization run.
    So, setSolution(...) method is now removed.

    * workben/optimizer/nlp_skel/main.cxx:
    * workben/optimizer/nlp_skel/myfunctor.cxx:
    * workben/optimizer/nlp_skel/myfunctor.hxx:
    * workben/optimizer/nlp_skel/myoptimizer.cxx: added some example code to
    show how the goal is set & queried, and made mods for the above change.

2007-03-25  Kohei Yoshida  <kyoshida@novell.com>

    * source/inc/numeric/nlpmodel.hxx: added in javadoc bits about