@@ -1,5 +1,10 @@
 2007-05-04  Kohei Yoshida  <kyoshida@novell.com>
 
+    * source/service/service.cxx: commented out unused variables to remove 
+      warnings.  
+
+2007-05-04  Kohei Yoshida  <kyoshida@novell.com>
+
     * source/numeric/nlpmodel.cxx: added #include <stdio.h> header to fix 
       build breakage.  
 
